--- a/style.css
+++ b/style.css
@@ -132,9 +132,12 @@ a:active {
   background: var(--active-color);
   border-radius: 8px;
   border: none;
-  color: #fff;
   font-size: 1.4rem;
   line-height: 1.4rem;
+  cursor: pointer;
+}
+.register--button > a {
+  color: #fff;
 }
 
 /*   ##########  END OF  REGISTER PAGE ############ */
@@ -152,16 +155,15 @@ a:active {
 /*   ############################  MAIN SECTION ########## */
 .main--section {
   width: 98vw;
-  height: 110vh;
+  height: 140vh;
   max-width: 1350px;
   min-width: 1320px;
-  max-height: 780px;
   background: var(--bg-color);
   border-radius: var(--border-radius);
   margin: 0.1rem auto;
+  overflow: hidden;
   padding: 0.2rem;
   display: flex;
-  overflow: hidden;
 }
 
 /*  DASHBOARD */
@@ -170,7 +172,11 @@ a:active {
   width: 20%;
   height: 100%;
   max-height: 780px;
+  position: fixed;
+  top: 0;
+  left: 0;
   min-height: 770px;
+  z-index: 222;
 }
 
 .navbar {
@@ -210,21 +216,37 @@ a:active {
   gap: 2rem;
   position: relative;
 }
-/* .navbar--list li::before {
-  content: "";
+.navbar--li {
+  position: relative;
+}
+.active--span1 {
   position: absolute;
-  left: -20px;
-  top: 0;
-  width: 1.5px;
   height: 100%;
-  background: var(--active-color);
-} */
+  width: 2px;
+  top: 0;
+  left: -15px;
+  background: none;
+}
+.active--span {
+  position: absolute;
+  height: 100%;
+  width: 2px;
+  top: 0;
+  left: -15px;
+  background: none;
+}
+.navbar--list ul > li > a {
+  width: 100%;
+  height: 100%;
+  margin: 0.4rem 0;
+}
 .navbar--list > ul > li > span {
   color: var(--text-color2);
 }
 .nav--icon {
   font-size: 1.7rem;
   color: #a0aec0;
+  margin-right: 1.5rem;
 }
 .navbar--bottom {
   margin-bottom: 1rem;
@@ -237,19 +259,27 @@ a:active {
   font-size: 1.4rem;
   margin: 2rem 0;
 }
-/*   END OF DASHBORD */
-/*   RIGHT SIDE  */
-.right--side {
-  display: flex;
-  flex-direction: column;
+.navbar--bottom > ul > li > a {
   width: 100%;
   height: 100%;
 }
+
+/*   END OF DASHBORD */
+/*   RIGHT SIDE  */
+.right--side {
+  width: 80%;
+  margin-left: 20%;
+  margin-top: 7%;
+}
 .right--side__top {
   background: #fff;
-  width: 100%;
+  width: 80%;
   border-left: 1px solid var(--bg-color);
   padding: 1rem 2rem;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 222;
 }
 .flex {
   display: flex;
@@ -264,19 +294,25 @@ a:active {
   line-height: 136.02%;
 }
 .create--btn {
-  padding: 0.8rem 1.8rem;
   font-size: 1.3rem;
   line-height: 12px;
-  height: 40px;
+  height: 43px;
   width: 110px;
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  justify-content: center;
   border: none;
   border-radius: var(--border-radius);
   color: #fff;
   background: var(--active-color);
+}
+.create--btn a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 0.6rem;
+  align-items: center;
+  justify-content: center;
+}
+.create--btn .bi-plus {
+  margin-right: 0.8rem;
 }
 .change--cart ul {
   display: flex;
@@ -285,10 +321,30 @@ a:active {
 }
 .change--cart ul > li {
   font-weight: 600;
-  font-size: 1.3rem;
+  margin-bottom: -5px;
   line-height: 10px;
   color: var(--aplicant-color);
+  cursor: pointer;
 }
+.change--cart ul > li > p {
+  font-size: 1.4rem;
+}
+.uic--li {
+  position: relative;
+}
+.span {
+  position: absolute;
+  bottom: 0px;
+  left: 1%;
+  width: 6%;
+  height: 2px;
+  border-radius: 0.4rem;
+  background: var(--active-color);
+}
+.uic--li_2 {
+  left: 11%;
+}
+
 /*     USER LIST  */
 .users--list {
   padding: 1rem 2rem;
@@ -332,6 +388,9 @@ a:active {
   font-size: 1.3rem;
   line-height: 162%;
 }
+.section--active {
+  display: block;
+}
 .grid--item ul {
   display: flex;
   gap: 2rem;
@@ -370,6 +429,9 @@ a:active {
 .applicants--section {
   background: #fafafb;
   padding: 1rem 2rem;
+
+  margin-top: 1.9rem;
+  border-radius: 1.5rem;
 }
 .applicant--level {
   display: flex;
@@ -413,8 +475,8 @@ a:active {
   gap: 1.5rem;
 }
 .first--info__style {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   background: #ffeef1;
   border-radius: 8px;
   display: flex;
@@ -425,14 +487,14 @@ a:active {
 }
 .info--text h5 {
   font-weight: 600;
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   line-height: 10px;
   color: var(--text-color1);
   margin-bottom: 0.4rem;
 }
 .info--text small {
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 10px;
   color: #7a7a9d;
 }
@@ -455,13 +517,14 @@ a:active {
   color: var(--text-color2);
 }
 .fourth--info button {
-  padding: 0.4rem 1rem;
+  padding: 0.5rem 1rem;
   border: none;
   background: var(--active-color);
   border-radius: 6px;
-  font-size: 1rem;
+  font-size: 1.1rem;
   color: #fff;
   line-height: 14px;
+  cursor: pointer;
 }
 
 /*   ######  ###### end of applicants list ############ */
@@ -486,6 +549,10 @@ a:active {
   align-items: center;
   gap: 1.3rem;
 }
+#myImg {
+  width: 65px;
+  height: 65px;
+}
 .user--account__info h3 {
   font-weight: 600;
   font-size: 1.5rem;
@@ -497,17 +564,35 @@ a:active {
   font-size: 1.2rem;
   color: #425466;
 }
-.upload--icon p {
+.upload--icon {
+  width: 80px;
+  height: 35px;
+}
+
+.upload--icon label {
+  padding: 0.5rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 600;
   font-size: 12px;
   line-height: 12px;
   color: #16192c;
+  cursor: pointer;
+  transition: all 0.5s linear;
+  border-radius: 0.5rem;
+}
+.upload--icon label:hover {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .upload--icon input {
   display: none;
 }
 .upload--icon i {
   margin-right: 0.5rem;
+  cursor: pointer;
 }
 .account--form {
   width: 100%;
@@ -577,6 +662,7 @@ a:active {
   border-radius: 6px;
   display: float;
   float: right;
+  cursor: pointer;
 }
 /*   ################  USER ACCOUNT PAGE ############# */
 /* =============  TEST RENDER ======== */
@@ -610,7 +696,7 @@ a:active {
 .test--render {
   background-color: #fff;
   width: 97%;
-  margin: 1rem auto;
+  margin: -0.5rem auto;
   padding: 1rem 0;
   border-radius: 1rem;
 }
@@ -670,11 +756,16 @@ a:active {
   background: var(--active-color);
   color: #fff;
   border: none;
+  cursor: pointer;
 }
 
 .test--disable {
   background: #ebf2fa;
   color: #a6b7d4;
+}
+.active--btn {
+  background: var(--active-color);
+  color: #fff;
 }
 /*  ################   CREATE TEST ############ */
 .head--flex {
@@ -790,7 +881,6 @@ a:active {
 }
 
 .create--test__btn {
-  padding: 1rem 1.5rem;
   background: var(--active-color);
   color: #fff;
   display: flex;
@@ -800,10 +890,19 @@ a:active {
   border-radius: 6px;
   gap: 0.7rem;
 }
+.create--test__btn a {
+  width: 100%;
+  height: 100%;
+  padding: 1rem 1.5rem;
+  color: #fff;
+}
 .show--test {
   background: none;
-  color: #16192c;
+
   border: 1px solid #edf2f7;
+}
+.show--test a {
+  color: #16192c;
 }
 .create--test__btn img {
   width: 15px;
@@ -820,6 +919,7 @@ a:active {
   align-items: center;
   padding: 2rem;
   border-radius: 1rem;
+  margin-top: -1.4rem;
 }
 .add--test__head h3 {
   font-size: 2rem;
@@ -842,6 +942,7 @@ a:active {
   color: var(--active-color);
   border: none;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 .add--test__body {
   background: #fff;
@@ -870,6 +971,7 @@ a:active {
   border: none;
   background: none;
   border-radius: 6px;
+  cursor: pointer;
 }
 .add--body__btns button:nth-child(1) {
   border: 1px solid #edf2f7;
@@ -911,14 +1013,115 @@ a:active {
 }
 
 .add--question--list .question--list__input {
-  width: 96%;
+  width: 97%;
   padding: 0.8rem;
   background: rgba(237, 242, 247, 0.25);
   border: 1px solid #edf2f7;
   border-radius: 6px;
-
   outline: none;
+}
+.question--clear {
+  border: none;
+  background: none;
+  margin-left: 0.5rem;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
 .add--question--list .bi-x {
   font-size: 1.2rem;
+}
+
+/*   SHOW SCORE  */
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 300;
+  display: none;
+}
+.test--result {
+  position: absolute;
+  left: 25%;
+  background: rgb(254, 255, 255);
+  top: 10%;
+  width: 60%;
+  z-index: 320;
+  transform: translateY(-150%);
+}
+.result--chard {
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  transition: all 0.5s linear;
+}
+.result--chard img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.restart--btn {
+  width: 30%;
+  margin-top: 2rem;
+  padding: 0;
+  height: 38px;
+}
+.restart--btn a {
+  width: 100%;
+  height: 100%;
+  display: block;
+  padding: 1rem 0;
+}
+
+.show--modal {
+  transform: translateY(0%);
+}
+.test--finish {
+  cursor: pointer;
+}
+.user--img {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
+.show--timeContent {
+  margin-left: 0.8rem;
+}
+.head--flex__btn {
+  border: none;
+  background: none;
+  font-size: 1.8rem;
+  padding: 0;
+  cursor: pointer;
+}
+.newqueston--list {
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  background: #c1ccdb3c;
+  border-radius: 0.6rem;
+  width: 100%;
+  height: 100%;
+  padding: 1rem 0;
+}
+/* python test render */
+.python--test {
+  display: flex;
+  height: 40vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+/* fdfdsfsd */
+.change--file {
+  width: 30px;
+  height: 30px;
+  font-size: 1.8rem;
+  background: none;
+  border: none;
+}
+.user--profile {
+  margin-right: 1.5rem;
 }
