--- a/pages/admin.css
+++ b/pages/admin.css
@@ -31,8 +31,8 @@
   position: absolute;
   top: -40%;
   left: 38%;
-  width: 30%;
-  height: 40vh;
+  width: 350px;
+  height: 250px;
   background: #fff;
   padding: 2rem;
   border-radius: 1.5rem;
